

IF(OPENFLUID_NLS_ENABLE)

    FIND_PROGRAM(MSGFMT_EXECUTABLE msgfmt)
    
    FILE(GLOB OPENFLUID_PO_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.po)
        
    ADD_CUSTOM_TARGET(i18n ALL)    
        
    FOREACH(OPENFLUID_PO_INPUT ${OPENFLUID_PO_FILES})
    
        GET_FILENAME_COMPONENT(OPENFLUID_PO_INPUT_BASE ${OPENFLUID_PO_INPUT} NAME_WE)
                
        SET(OPENFLUID_MO_OUTPUT "${PO_BUILD_DIR}/${OPENFLUID_PO_INPUT_BASE}/LC_MESSAGES/${OPENFLUID_NLS_PACKAGE}.mo")
        
        FILE(MAKE_DIRECTORY "${PO_BUILD_DIR}/${OPENFLUID_PO_INPUT_BASE}/LC_MESSAGES")
        
        ADD_CUSTOM_COMMAND(DEPENDS ${OPENFLUID_PO_INPUT}
                           COMMAND ${MSGFMT_EXECUTABLE} -c -o ${OPENFLUID_MO_OUTPUT} ${OPENFLUID_PO_INPUT} 
                           OUTPUT ${OPENFLUID_MO_OUTPUT})
        
        ADD_CUSTOM_TARGET(i18n-${OPENFLUID_PO_INPUT_BASE}
                          COMMENT "Building i18n messages for ${OPENFLUID_PO_INPUT_BASE}"
                          DEPENDS ${OPENFLUID_MO_OUTPUT})


        ADD_DEPENDENCIES(i18n i18n-${OPENFLUID_PO_INPUT_BASE})
    
        INSTALL(FILES "${OPENFLUID_MO_OUTPUT}" 
                DESTINATION "share/locale/${OPENFLUID_PO_INPUT_BASE}/LC_MESSAGES" 
                RENAME "${OPENFLUID_NLS_PACKAGE}.mo"
                )
        
    ENDFOREACH(OPENFLUID_PO_INPUT ${OPENFLUID_PO_FILES})
    
ENDIF(OPENFLUID_NLS_ENABLE)