
STRING(RANDOM LENGTH 6 ALPHABET "0123456789" OFBUILD_GITASKPASS_ENVVAR_SUFFIX)
SET(OFBUILD_GITASKPASS_ENVVAR "${OFBUILD_GITASKPASS_ENVVAR_PREFIX}${OFBUILD_GITASKPASS_ENVVAR_SUFFIX}")

ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_BINARY_DIR}/src"
                    ${Boost_INCLUDE_DIRS} ${GDAL_INCLUDE_DIRS} ${RapidJSON_INCLUDE_DIR}
                    )

                    
LINK_DIRECTORIES(${GDAL_LIBRARY_DIRS})


ADD_SUBDIRECTORY(openfluid)

ADD_SUBDIRECTORY(apps)

ADD_SUBDIRECTORY(observers)

IF(OFBUILD_ENABLE_APP_BUILDER AND OFBUILD_ENABLE_GUI)
  ADD_SUBDIRECTORY(builderexts)
ENDIF()


IF(OFBUILD_ENABLE_TESTING)
  ADD_SUBDIRECTORY(tests)
ENDIF()  


