
STRING(RANDOM LENGTH 6 ALPHABET "0123456789" OFBUILD_GITASKPASS_ENVVAR_SUFFIX)
SET(OFBUILD_GITASKPASS_ENVVAR "${OFBUILD_GITASKPASS_ENVVAR_PREFIX}${OFBUILD_GITASKPASS_ENVVAR_SUFFIX}")

ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)

INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_BINARY_DIR}/src"
                    ${Boost_INCLUDE_DIRS} ${GDAL_INCLUDE_DIRS}
                    )

FOREACH(THIRD_DIR ${OFBUILD_3RDPARTY_SUBDIRS_LIST})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${OFBUILD_3RDPARTY_ROOT_DIR}/${THIRD_DIR})
  INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/${OFBUILD_3RDPARTY_ROOT_DIR}/${THIRD_DIR}/include)
ENDFOREACH()

LINK_DIRECTORIES(${GDAL_LIBRARY_DIRS})


ADD_SUBDIRECTORY(openfluid)

ADD_SUBDIRECTORY(apps)

ADD_SUBDIRECTORY(observers)

IF(OFBUILD_ENABLE_APP_BUILDER)
  ADD_SUBDIRECTORY(builderexts)
ENDIF()


IF(OFBUILD_ENABLE_TESTING)
  ADD_SUBDIRECTORY(tests)
ENDIF()  


