
IF(BUILD_TESTING)
  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
  MARK_AS_ADVANCED(BUILDNAME)
ENDIF(BUILD_TESTING)

FILE(MAKE_DIRECTORY "${TESTS_OUTPUTDATA_PATH}")

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/tests-config.h.in ${CMAKE_BINARY_DIR}/tests-config.h)


ADD_SUBDIRECTORY(unittesting)

ADD_SUBDIRECTORY(integration)

ADD_SUBDIRECTORY(functions)

                           