
IF(BUILD_TESTING)
  SET(BUILDNAME "${BUILDNAME}" CACHE STRING "Name of build on the dashboard")
  MARK_AS_ADVANCED(BUILDNAME)
ENDIF(BUILD_TESTING)

FILE(MAKE_DIRECTORY "${TESTS_OUTPUTDATA_PATH}")

CONFIGURE_FILE(tests-config.hpp.in ${PROJECT_BINARY_DIR}/src/tests/tests-config.hpp)


FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework)  
FIND_PACKAGE(GDAL REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${LibXML2_INCLUDE_DIRS} ${GLIBMM_INCLUDE_DIRS} ${GDAL_INCLUDE_DIRS}
                    "${PROJECT_SOURCE_DIR}/src" "${PROJECT_BINARY_DIR}/src" "${PROJECT_BINARY_DIR}/src/tests")
                    
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS} ${LibXML2_LIBRARY_DIRS} ${GDAL_LIBRARY_DIRS})


ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)

ADD_SUBDIRECTORY(unit)

ADD_SUBDIRECTORY(integration)

ADD_SUBDIRECTORY(functions)

ADD_SUBDIRECTORY(examples)

                           