INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src" "${PROJECT_BINARY_DIR}/src")


SET(WARE_LINKUID "help")


OFBUILD_ADD_SIMULATOR(help.snippets.example ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.signature ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.signature-parts ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.sched-fixed ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.sched-variable ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.spatial-parsing-seq ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.spatial-parsing-parallel ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.spatial-connect ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.params-env-time ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.attributes ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.variables ${OFBUILD_TESTS_BINARY_DIR})
OFBUILD_ADD_SIMULATOR(help.snippets.events ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.internal-state ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.infos-debug ${OFBUILD_TESTS_BINARY_DIR})

IF(OFBUILD_TESTS_ENABLE_FORTRAN)
  ENABLE_LANGUAGE(Fortran)
  OFBUILD_ADD_SIMULATOR(help.snippets.fortran ${OFBUILD_TESTS_BINARY_DIR})
  OFBUILD_ADD_SIMULATOR(help.snippets.fortran-more ${OFBUILD_TESTS_BINARY_DIR})
ENDIF()

IF(OFBUILD_TESTS_ENABLE_EMBEDDING_R)
  OFBUILD_ADD_SIMULATOR(help.snippets.R ${OFBUILD_TESTS_BINARY_DIR})
ENDIF()

OFBUILD_ADD_SIMULATOR(help.snippets.sim2doc ${OFBUILD_TESTS_BINARY_DIR})

OFBUILD_ADD_SIMULATOR(help.snippets.debug ${OFBUILD_TESTS_BINARY_DIR})

ADD_SUBDIRECTORY(misc)