

IF(OFBUILD_ENABLE_APP_MINIMAL)
  ADD_SUBDIRECTORY(openfluid-minimal)
ENDIF()

IF(OFBUILD_ENABLE_APP_CMD)
  ADD_SUBDIRECTORY(openfluid)
ENDIF()

IF(OFBUILD_ENABLE_APP_BUILDER)
  ADD_SUBDIRECTORY(openfluid-builder)
ENDIF()

IF(OFBUILD_ENABLE_APP_DEVSTUDIO)
  ADD_SUBDIRECTORY(openfluid-devstudio)
  ADD_SUBDIRECTORY(openfluid-gitaskpass)
ENDIF()

IF(OFBUILD_ENABLE_APP_LOGEXPLORER)
  ADD_SUBDIRECTORY(openfluid-logexplorer)
ENDIF()
