CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

ADD_DEFINITIONS(-DOFELIB_VERSION=${ENGINE_FULL_VERSION})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/include/core ${CMAKE_SOURCE_DIR}/include/base ${CMAKE_SOURCE_DIR}/include/tools)

MACRO(ADD_FUNCTION FUNC_NAME FUNC_DIR)
  FILE(GLOB FUNC_CPP ${FUNC_DIR}/*.cpp)
  ADD_LIBRARY(${FUNC_NAME} MODULE ${FUNC_CPP})
  SET_TARGET_PROPERTIES(${FUNC_NAME} PROPERTIES PREFIX "" SUFFIX "${CMAKE_SHARED_LIBRARY_SUFFIX}mpi" LIBRARY_OUTPUT_DIRECTORY "${FUNCTIONS_OUTPUT_PATH}")
  TARGET_LINK_LIBRARIES(${FUNC_NAME} ofelib ${wxWidgets_LIBRARIES})
  
  INSTALL(TARGETS ${FUNC_NAME}
          DESTINATION ${FUNCTIONS_INSTALL_PATH} COMPONENT functions)
  
ENDMACRO(ADD_FUNCTION)



ADD_SUBDIRECTORY(standard)
ADD_SUBDIRECTORY(mhydas)




