CMAKE_MINIMUM_REQUIRED (VERSION 2.6)

ADD_DEFINITIONS(-DOFELIB_VERSION=${ENGINE_FULL_VERSION})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include ${CMAKE_SOURCE_DIR}/include/core ${CMAKE_SOURCE_DIR}/include/base ${CMAKE_SOURCE_DIR}/include/tools)


IF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/foundry AND BUILD_FUNCTIONS_FOUNDRY)
  ADD_SUBDIRECTORY(foundry)
ENDIF(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/foundry AND BUILD_FUNCTIONS_FOUNDRY)  


